created: file structure for styles

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,7 @@
-@import	'_main'
+@import	'_settings'
 @import	'_fonts'
-@import	'_header'
-@import	'_hero'
 @import	'_normalize'
-@import	'_footer'
+@import	'_variables'	
+@import	'blocks/_header'
+@import	'blocks/_hero'
+@import	'blocks/_footer'
