created: styles for header

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -3,6 +3,8 @@
 
 body	
 	font-family:	'Muli',	sans-serif
+	color:	$text-color
+
 	
 	
 
@@ -16,8 +18,7 @@ a
 	text-decoration:	none
 	color:	#202020
 
-img
-	max-width:	100%
+
 
 ul	
 	margin:	0
@@ -29,8 +30,12 @@ button
 	&:hover
 		cursor:	pointer
 
+form,	input
+		outline:	none
+
 .container
-	
+	max-width:	1110px
+	margin:	0	auto
 
 
 
