--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 
 body {
   font-family: 'Muli',	sans-serif;
+  color: #333;
 }
 
 h2, h3, h4 {
@@ -20,10 +21,6 @@ a {
   color: #202020;
 }
 
-img {
-  max-width: 100%;
-}
-
 ul {
   margin: 0;
   padding: 0;
@@ -35,6 +32,15 @@ button {
 
 button:hover {
   cursor: pointer;
+}
+
+form, input {
+  outline: none;
+}
+
+.container {
+  max-width: 1110px;
+  margin: 0	auto;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -378,5 +384,92 @@ template {
  */
 [hidden] {
   display: none;
+}
+
+.header {
+  background: #FFF;
+}
+
+.header-top {
+  padding: 40px	0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header__search {
+  margin-right: auto;
+  margin-left: 108px;
+}
+
+.search {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  height: 40px;
+  border-radius: 6px;
+}
+
+.search__input {
+  width: 350px;
+  height: 100%;
+  padding-left: 23px;
+  padding-right: 70px;
+  background-color: #F5FAFE;
+  border: none;
+  font-size: 12px;
+  line-height: 15px;
+  font-size: 12px;
+  color: #333;
+}
+
+.search__button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 65px;
+  background: #EC1F46;
+  border: none;
+}
+
+.user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.user__avatar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.user__img {
+  width: 155%;
+  display: block;
+}
+
+.user__name {
+  margin-left: 18px;
+  font-size: 14px;
+  color: #333;
 }
 /*# sourceMappingURL=style.css.map */
