--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,1 +1,63 @@
+.header
+	background:	#FFF
+	&-top
+		padding:	40px	0
+		display:	flex
+		align-items:	center
+		justify-content:	space-between
+	&__search
+		margin-right:	auto
+		margin-left:	108px
+
+.logo
+	&__img
+
+.search
+	position:	relative
+	display:	flex
+	overflow:	hidden
+	height:	40px
+	border-radius:	6px
+	&__input
+		width:	350px
+		height:	100%
+		padding-left:	23px
+		padding-right:	70px
+		background-color:	#F5FAFE
+		border:	none
+		font-size:	12px
+		line-height:	15px
+		font-size:	12px
+		color:	$text-color
+	&__button
+		position:	absolute
+		top:	0
+		right:	0
+		height:	100%
+		width:	65px
+		background:	$primary
+		border:	none
+
+		
+
+.user
+	display:	flex
+	align-items:	center
+	&__avatar
+		display:	flex
+		justify-content:	center
+		width:	40px
+		border-radius:	50%
+		overflow:	hidden
+	&__img	
+		width:	155%
+		display:	block
+	&__name
+		margin-left:	18px
+		font-size:	14px
+		color:	$text-color
+
+.header-menu
+	&__item
+	&__link
 
