created styles for header-bottom

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -57,7 +57,16 @@
 		font-size:	14px
 		color:	$text-color
 
+.header-bottom	
+	background-color:	#0A223D
+	padding:	31px	0
 .header-menu
+	display:	flex
+	justify-content:	space-between
 	&__item
 	&__link
+		font-size:	14px
+		text-transform:	uppercase
+		font-weight:	bold
+		color:	#FFF
 
