--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ a {
 }
 
 ul {
+  list-style: none;
   margin: 0;
   padding: 0;
 }
@@ -471,5 +472,26 @@ template {
   margin-left: 18px;
   font-size: 14px;
   color: #333;
+}
+
+.header-bottom {
+  background-color: #0A223D;
+  padding: 31px	0;
+}
+
+.header-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header-menu__link {
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #FFF;
 }
 /*# sourceMappingURL=style.css.map */
