--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@ ul {
 
 button {
   outline: none;
+  background: none;
+  border: none;
+  margin: 0;
+  padding: 0;
 }
 
 button:hover {
@@ -42,6 +46,24 @@ form, input {
 .container {
   max-width: 1110px;
   margin: 0	auto;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    max-width: 960px;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 700px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 88%;
+  }
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -387,11 +409,8 @@ template {
   display: none;
 }
 
-.header {
+.navbar-top__content {
   background: #FFF;
-}
-
-.header-top {
   padding: 40px	0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -404,9 +423,17 @@ template {
           justify-content: space-between;
 }
 
-.header__search {
+.navbar-top__search {
   margin-right: auto;
   margin-left: 108px;
+}
+
+.logo {
+  width: 177px;
+}
+
+.logo__img {
+  width: 100%;
 }
 
 .search {
@@ -474,12 +501,16 @@ template {
   color: #333;
 }
 
-.header-bottom {
+.menu-burger {
+  display: none;
+}
+
+.navbar-bottom {
   background-color: #0A223D;
   padding: 31px	0;
 }
 
-.header-menu {
+.navbar-menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -488,10 +519,81 @@ template {
           justify-content: space-between;
 }
 
-.header-menu__link {
+.navbar-menu__link {
   font-size: 14px;
   text-transform: uppercase;
   font-weight: bold;
   color: #FFF;
+}
+
+@media (max-width: 992px) {
+  .navbar-top__content {
+    padding: 30px	0;
+  }
+  .navbar-top__search {
+    margin-left: auto;
+  }
+  .navbar-bottom {
+    padding: 22px	0;
+  }
+  .navbar-menu {
+    margin: 0	13.5px;
+  }
+  .navbar-menu__link {
+    font-size: 12px;
+  }
+  .search__input {
+    width: 340px;
+  }
+  .logo {
+    width: 132px;
+  }
+}
+
+@media (max-width: 768px) {
+  .menu-burger {
+    display: block;
+    position: relative;
+    width: 16px;
+    height: 11px;
+  }
+  .menu-burger__line {
+    content: '';
+    background-color: #333;
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    left: 0;
+    top: 5px;
+  }
+  .menu-burger::before, .menu-burger::after {
+    content: '';
+    background-color: #333;
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    left: 0;
+  }
+  .menu-burger::before {
+    top: 0;
+  }
+  .menu-burger::after {
+    bottom: 0;
+  }
+  .search {
+    display: none;
+  }
+  .user {
+    display: none;
+  }
+  .navbar-bottom {
+    display: none;
+  }
+}
+
+@media (max-width: 480px) {
+  .logo {
+    width: 99px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
