--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,33 +1,31 @@
-*	
+*
 	box-sizing:	border-box
 
-body	
+body
 	font-family:	'Muli',	sans-serif
 	color:	$text-color
-
-	
-	
 
 h2,h3,h4
 	margin:	0
 
-p	
+p
 	margin:	0
 
-a	
+a
 	text-decoration:	none
 	color:	#202020
 
-
-
-ul	
+ul
 	list-style:	none
 	margin:	0
 	padding:	0
 
-  
 button
 	outline:	none
+	background:	none
+	border:	none
+	margin:	0
+	padding:	0
 	&:hover
 		cursor:	pointer
 
@@ -38,11 +36,15 @@ form,	input
 	max-width:	1110px
 	margin:	0	auto
 
-
-
-//@media	(max-width:	1200px)
-//@media	(max-width:	991px)
-//@media	(max-width:	768px)
+@media	(max-width:	1200px)
+	.container
+		max-width:	960px
+@media	(max-width:	992px)
+	.container
+		max-width:	700px
+@media	(max-width:	768px)
+	.container
+		max-width:	88%
 //@media	(max-width:	576px)
-//@media	(max-width:	480px)
 
+//@media	(max-width:	480px)
