--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -131,5 +131,9 @@
 
 //@media	(max-width:	576px)
 @media	(max-width:	480px)
+	.navbar
+		&-top
+			&__content
+				padding: 28px	0
 	.logo
 		width:	99px
