--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -4,11 +4,16 @@
 body
 	font-family:	'Muli',	sans-serif
 	color:	$text-color
+	background-color:	$secondary
 
 h2,h3,h4
 	margin:	0
 
 p
+	margin:	0
+
+span
+	padding:	0
 	margin:	0
 
 a
