--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -1,7 +1,7 @@
 .navbar
 	&-top
+		background-color:	#fff
 		&__content
-			background:	#FFF
 			padding:	40px	0
 			display:	flex
 			align-items:	center
@@ -134,6 +134,6 @@
 	.navbar
 		&-top
 			&__content
-				padding: 28px	0
+				padding:	28px	0
 	.logo
 		width:	99px
