--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,5 +3,6 @@
 @import	'_fonts'
 @import	'_normalize'
 @import	'blocks/_header'
-@import	'blocks/_hero'
+@import	'blocks/_breadcrumb'
+@import	'blocks/_hotel'
 @import	'blocks/_footer'
