--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -1,72 +1,105 @@
 .hotel
-	padding:	23px	0	70px
+	padding: 23px	0	70px
 	&-wrapper
-		display:	flex
-		justify-content:	space-between
-		align-items:	center
+		display: flex
+		justify-content: space-between
+		align-items: center
+		padding-bottom: 20px
 	&-name
-		font-weight:	700
-		font-size:	24px
-		text-transform:	uppercase
+		font-weight: 700
+		font-size: 24px
+		text-transform: uppercase
 	&-text
 		&__wrap
-			display:	flex
-			align-items:	center
-			flex-wrap:	wrap
+			display: flex
+			align-items: center
+			flex-wrap: wrap
 		&__stars
-			margin-bottom:	4px
-			flex-basis:	100%
+			margin-bottom: 4px
+			flex-basis: 100%
 		&__title
-			margin-right:	14px
+			margin-right: 14px
 		&__offer
-			font-weight:	600
-			font-size:	10px
-			line-height:	13px
-			color:	#fff
-			background-color:	$primary
-			padding:	4px	9px
-			border-radius:	3px
+			font-weight: 600
+			font-size: 10px
+			line-height: 13px
+			color: #fff
+			background-color: $primary
+			padding: 4px	9px
+			border-radius: 3px
 		&__desc
-			font-size:	12px
-			line-height:	15px
+			font-size: 12px
+			line-height: 15px
 	&-rating
-		max-width:	65px
-		min-height:	45px
-		text-align:	center
-		background-color:	$primary
-		border-radius:	4px
-		color:	#fff
+		max-width: 65px
+		min-height: 45px
+		text-align: center
+		background-color: $primary
+		border-radius: 4px
+		color: #fff
 		&__text
-			font-weight:	600
-			font-size:	8px
-			line-height:	10px
+			font-weight: 600
+			font-size: 8px
+			line-height: 10px
 		&__evaluation
-			font-weight:	700
-			font-size:	14px
-			line-height:	18px
+			font-weight: 700
+			font-size: 14px
+			line-height: 18px
+
+.swiper-container
+	position: relative
+	width: 100%
+	height: 450px
+	border-radius: 8px
+	&::after
+		content: ''
+		width: 100%
+		height: 100%
+		position: absolute
+		top: 0
+		right: 0
+		background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+		z-index: 1
+
+.slider
+	width: 728px
+	&-button
+		position: absolute
+		top: 50%
+		transform: translateY(-50%)
+		z-index: 2
+		width: 30px
+		height: 30px
+		background-repeat: no-repeat
+		background-position: center
+		&--prev
+			left: 18px
+			background-image: url(../img/arrow-prev.svg)
+		&--next
+			right: 18px
+			background-image: url(../img/arrow-next.svg)
+	&__img
+		width: 100%
 
 @media	(max-width:	768px)
 	.hotel
-		padding:	5px	0	40px
+		padding: 5px	0	40px
 		&-text
-			flex-basis:	100%
+			flex-basis: 100%
 			&__wrap
-				justify-content:	space-between
-				align-items:	center
+				justify-content: space-between
+				align-items: center
 			&__title
-				flex-basis:	100%
-				margin-top:	10px
+				flex-basis: 100%
+				margin-top: 10px
 			&__offer
-				order:	-1
+				order: -1
 			&__stars
-				flex-basis:	auto
+				flex-basis: auto
 		&-rating
-			display:	none
+			display: none
 
 @media	(max-width:	320px)
 	.hotel
 		&-name
-			font-size:	20px
-
-		
-
+			font-size: 20px
