--- a/css/style.css
+++ b/css/style.css
@@ -495,6 +495,7 @@ template {
       -ms-flex-pack: center;
           justify-content: center;
   width: 40px;
+  height: 40px;
   border-radius: 50%;
   overflow: hidden;
 }
