--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,55 +1,59 @@
 *
-	box-sizing:	border-box
+	box-sizing: border-box
 
 body
-	font-family:	'Muli',	sans-serif
-	color:	$text-color
-	background-color:	$secondary
+	font-family: 'Muli',	sans-serif
+	color: $text-color
+	background-color: $secondary
 
 h2,h3,h4
-	margin:	0
+	margin: 0
 
 p
-	margin:	0
+	margin: 0
 
 span
-	padding:	0
-	margin:	0
+	padding: 0
+	margin: 0
 
 a
-	text-decoration:	none
-	color:	#202020
+	text-decoration: none
+	color: #202020
 
 ul
-	list-style:	none
-	margin:	0
-	padding:	0
+	list-style: none
+	margin: 0
+	padding: 0
 
 button
-	outline:	none
-	background:	none
-	border:	none
-	margin:	0
-	padding:	0
+	outline: none
+	background: none
+	border: none
+	margin: 0
+	padding: 0
 	&:hover
-		cursor:	pointer
+		cursor: pointer
 
 form,	input
-		outline:	none
+		outline: none
+
+.button
+	background: $primary
+	color: #fff
 
 .container
-	max-width:	1110px
-	margin:	0	auto
+	max-width: 1110px
+	margin: 0	auto
 
 @media	(max-width:	1200px)
 	.container
-		max-width:	960px
+		max-width: 960px
 @media	(max-width:	992px)
 	.container
-		max-width:	700px
+		max-width: 700px
 @media	(max-width:	768px)
 	.container
-		max-width:	88%
+		max-width: 88%
 //@media	(max-width:	576px)
 
 //@media	(max-width:	480px)
