--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,11 @@ form, input {
   outline: none;
 }
 
+.button {
+  background: #EC1F46;
+  color: #fff;
+}
+
 .container {
   max-width: 1110px;
   margin: 0	auto;
@@ -474,7 +479,6 @@ template {
   right: 0;
   height: 100%;
   width: 65px;
-  background: #EC1F46;
   border: none;
 }
 
@@ -707,6 +711,28 @@ template {
   line-height: 18px;
 }
 
+.hotel-grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.hotel-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .swiper-container {
   position: relative;
   width: 100%;
@@ -754,6 +780,119 @@ template {
 
 .slider__img {
   width: 100%;
+}
+
+.booking {
+  padding: 28px;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 350px;
+  min-height: 210px;
+  background-color: #0A223D;
+  color: #fff;
+}
+
+.booking__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 9px;
+}
+
+.booking__price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-bottom: 9px;
+}
+
+.booking__call-center {
+  margin-bottom: 17px;
+}
+
+.booking-button {
+  width: 295px;
+  height: 45px;
+  border-radius: 4px;
+  font-size: 14px;
+  line-height: 19px;
+}
+
+.price__start {
+  font-size: 10px;
+  line-height: 14px;
+}
+
+.price__pricetag {
+  font-size: 24px;
+  line-height: 33px;
+  font-weight: 800;
+}
+
+.price__per-room {
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.person-room__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-size: 12px;
+  line-height: 16px;
+  margin-bottom: 8px;
+}
+
+.person-room__desc {
+  margin-left: 9px;
+}
+
+.call-center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.call-center__text {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.call-center__number {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.call-center__numb {
+  color: #fff;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+}
+
+.call-center__icon {
+  margin-right: 8px;
 }
 
 @media (max-width: 768px) {
