--- a/css/style.css
+++ b/css/style.css
@@ -790,6 +790,7 @@ template {
 }
 
 .booking {
+  font-family: 'Nunito', sans-serif;
   padding: 28px;
   border-radius: 8px;
   width: 350px;
@@ -1004,6 +1005,120 @@ template {
 @media (max-width: 320px) {
   .hotel-name {
     font-size: 20px;
+  }
+}
+
+.newsletter {
+  position: relative;
+  padding: 98px 0 87px;
+  background-image: url("../img/newsletter-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.newsletter::before {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(10, 34, 61, 0.8);
+  opacity: 0.8;
+}
+
+.newsletter-wrapper {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 731px;
+  margin: 0 auto;
+}
+
+.newsletter-title {
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: 300;
+  color: #ffffff;
+}
+
+.newsletter-title__strong {
+  display: block;
+  font-size: 36px;
+  line-height: 45px;
+  text-transform: uppercase;
+}
+
+.subscribe {
+  position: relative;
+  width: 350px;
+  height: 45px;
+  border-radius: 4px;
+  overflow: hidden;
+  color: #BDBDBD;
+}
+
+.subscribe__input {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding-left: 33px;
+  padding-right: 75px;
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.subscribe__button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  padding: 0 18px;
+  font-size: 12px;
+  font-weight: 600;
+}
+
+@media (max-width: 992px) {
+  .newsletter-wrapper {
+    max-width: 700px;
+  }
+}
+
+@media (max-width: 768px) {
+  .newsletter-wrapper {
+    max-width: 576px;
+    width: 92%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .newsletter-title__strong {
+    margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 480px) {
+  .newsletter {
+    padding: 76px 0 83px;
+  }
+  .subscribe {
+    width: 280px;
+  }
+  .subscribe__input {
+    padding-left: 20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
