added parallax-effect to newsletter section

--- a/css/style.css
+++ b/css/style.css
@@ -1011,10 +1011,10 @@ template {
 .newsletter {
   position: relative;
   padding: 98px 0 87px;
-  background-image: url("../img/newsletter-bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  margin-bottom: 800px;
 }
 
 .newsletter::before {
