--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -1,10 +1,10 @@
 .newsletter
 	position: relative
 	padding: 98px 0 87px
-	background-image: url("../img/newsletter-bg.jpg")
 	background-repeat: no-repeat
 	background-size: cover
 	background-position: center
+	margin-bottom: 800px
 	&::before
 		position: absolute
 		content: ''
