--- a/css/style.css
+++ b/css/style.css
@@ -735,14 +735,16 @@ template {
           justify-content: space-between;
 }
 
-.swiper-container {
+.hotel-slider {
   position: relative;
-  width: 100%;
+  width: 728px;
   height: 450px;
+  margin: 0;
+  overflow: hidden;
   border-radius: 8px;
 }
 
-.swiper-container::after {
+.hotel-slider::after {
   content: '';
   width: 100%;
   height: 100%;
@@ -754,35 +756,29 @@ template {
   z-index: 1;
 }
 
-.slider {
-  width: 728px;
-  height: 450px;
-  overflow: hidden;
-}
-
-.slider-button {
+.hotel-slider__button {
   position: absolute;
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  z-index: 2;
+  z-index: 20;
   width: 30px;
   height: 30px;
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.slider-button--prev {
+.hotel-slider__button--prev {
   left: 18px;
   background-image: url(../img/arrow-prev.svg);
 }
 
-.slider-button--next {
+.hotel-slider__button--next {
   right: 18px;
   background-image: url(../img/arrow-next.svg);
 }
 
-.slider__img {
+.hotel-slider__img {
   min-height: 100%;
   max-width: 100%;
   -o-object-fit: cover;
@@ -910,15 +906,12 @@ template {
 }
 
 @media (max-width: 1200px) {
-  .slider {
+  .hotel-slider {
     width: 590px;
   }
 }
 
 @media (max-width: 992px) {
-  .slider {
-    width: 100%;
-  }
   .hotel__slider {
     margin-bottom: 30px;
   }
@@ -931,6 +924,9 @@ template {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+  }
+  .hotel-slider {
+    width: 100%;
   }
   .booking {
     padding: 22px 22px;
@@ -974,7 +970,7 @@ template {
   .hotel-rating {
     display: none;
   }
-  .slider__img {
+  .hotel-slider__img {
     -o-object-fit: cover;
        object-fit: cover;
   }
@@ -994,10 +990,7 @@ template {
 }
 
 @media (max-width: 576px) {
-  .slider {
-    height: 278px;
-  }
-  .swiper-container {
+  .hotel-slider {
     height: 278px;
   }
 }
@@ -1014,7 +1007,6 @@ template {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  margin-bottom: 800px;
 }
 
 .newsletter::before {
@@ -1115,10 +1107,210 @@ template {
     padding: 76px 0 83px;
   }
   .subscribe {
-    width: 280px;
+    width: 220px;
   }
   .subscribe__input {
-    padding-left: 20px;
+    padding-left: 10px;
+  }
+}
+
+.reviews {
+  padding: 40px 0 70px;
+}
+
+.reviews-container {
+  margin: 0 auto;
+  max-width: 1074px;
+}
+
+.reviews__title {
+  margin-bottom: 70px;
+  font-weight: 700;
+  font-size: 36px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.reviews-slider {
+  width: 100%;
+}
+
+.reviews-slider__item {
+  position: relative;
+  z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 45px auto 0;
+  padding: 0 62px 30px;
+  max-width: 730px;
+  background: #fff;
+  border-radius: 8px;
+}
+
+.reviews-slider__item::before {
+  content: '';
+  position: absolute;
+  top: 12px;
+  z-index: -10;
+  left: 60px;
+  width: 70px;
+  height: 47px;
+  background-image: url(../img/quote-open.svg);
+  background-repeat: no-repeat;
+}
+
+.reviews-slider__item::after {
+  content: '';
+  position: absolute;
+  right: 60px;
+  bottom: 40%;
+  z-index: -10;
+  width: 70px;
+  height: 47px;
+  background-image: url(../img/quote-close.svg);
+  background-repeat: no-repeat;
+}
+
+.reviews-slider__profile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.reviews-slider__avatar {
+  margin-top: -45px;
+  margin-bottom: 9px;
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.reviews-slider__img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.reviews-slider__username {
+  margin-bottom: 10px;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #EC1F46;
+}
+
+.reviews-slider__date {
+  margin-bottom: 4px;
+  font-size: 10px;
+  line-height: 13px;
+}
+
+.reviews-slider__rating {
+  margin-bottom: 32px;
+}
+
+.reviews-slider__text {
+  font-size: 12px;
+  line-height: 160%;
+}
+
+.reviews-slider__button {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 20;
+  width: 30px;
+  height: 30px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.reviews-slider__button--prev {
+  left: 0;
+  background-image: url(../img/review-left.svg);
+}
+
+.reviews-slider__button--next {
+  right: 0;
+  background-image: url(../img/review-right.svg);
+}
+
+@media (max-width: 992px) {
+  .reviews {
+    padding: 40px 0 60px;
+  }
+  .reviews-container {
+    max-width: 700px;
+  }
+  .reviews-slider__item {
+    max-width: 579px;
+    padding: 0 30px 36px;
+  }
+}
+
+@media (max-width: 768px) {
+  .reviews {
+    padding: 40px 0 36px;
+  }
+  .reviews-container {
+    max-width: 98%;
+  }
+  .reviews__title {
+    font-size: 30px;
+    margin-bottom: 50px;
+  }
+  .reviews-slider__item {
+    max-width: 90%;
+  }
+  .reviews-slider__item::before, .reviews-slider__item ::after {
+    display: none;
+  }
+  .reviews-slider__button {
+    top: 30px;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
+  .reviews-slider__button--prev {
+    left: 50%;
+    margin-left: -80px;
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+  }
+  .reviews-slider__button--next {
+    right: 50%;
+    margin-right: -80px;
+    -webkit-transform: translate(50%, 0);
+            transform: translate(50%, 0);
+  }
+}
+
+@media (max-width: 576px) {
+  .reviews__title {
+    font-size: 18px;
+    margin-bottom: 42px;
+  }
+}
+
+@media (max-width: 321px) {
+  .reviews-slider__item {
+    max-width: 250px;
+  }
+  .reviews-slider__rating {
+    margin-bottom: 16px;
   }
 }
 /*# sourceMappingURL=style.css.map */
