--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -54,10 +54,12 @@
 		flex-direction: column
 		justify-content: space-between
 
-.swiper-container
+.hotel-slider
 	position: relative
-	width: 100%
+	width: 728px
 	height: 450px
+	margin: 0
+	overflow: hidden
 	border-radius: 8px
 	&::after
 		content: ''
@@ -68,16 +70,11 @@
 		right: 0
 		background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
 		z-index: 1
-
-.slider
-	width: 728px
-	height: 450px
-	overflow: hidden
-	&-button
+	&__button
 		position: absolute
 		top: 50%
 		transform: translateY(-50%)
-		z-index: 2
+		z-index: 20
 		width: 30px
 		height: 30px
 		background-repeat: no-repeat
@@ -168,12 +165,10 @@
 	overflow: hidden
 
 @media	(max-width:	1200px)
-	.slider
+	.hotel-slider
 		width: 590px
 
 @media	(max-width:	992px)
-	.slider
-		width: 100%
 	.hotel
 		&__slider
 			margin-bottom: 30px
@@ -181,6 +176,9 @@
 			width: 100%
 			flex-direction: row
 			justify-content: space-between
+
+	.hotel-slider
+		width: 100%
 
 	.booking
 		padding: 22px 22px
@@ -205,9 +203,10 @@
 				flex-basis: auto
 		&-rating
 			display: none
-	.slider
+	.hotel-slider
 		&__img
 			object-fit: cover
+
 	.hotel
 		&-right
 			flex-direction: column
@@ -216,14 +215,12 @@
 		width: 100%
 	.map
 		width: 100%
+
 @media	(max-width:	576px)
-	.slider
-		height: 278px
-	.swiper-container
+	.hotel-slider
 		height: 278px
 
 @media	(max-width:	320px)
 	.hotel
 		&-name
 			font-size: 20px
-	.slider
