--- a/css/style.css
+++ b/css/style.css
@@ -1037,6 +1037,8 @@ template {
 }
 
 .newsletter-title {
+  word-break: break-all;
+  max-width: 300px;
   font-size: 24px;
   line-height: 30px;
   font-weight: 300;
@@ -1044,6 +1046,7 @@ template {
 }
 
 .newsletter-title__strong {
+  max-width: 300px;
   display: block;
   font-size: 36px;
   line-height: 45px;
