--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -22,11 +22,14 @@
 		max-width: 731px
 		margin: 0 auto
 	&-title
+		word-break: break-all
+		max-width: 300px
 		font-size: 24px
 		line-height: 30px
 		font-weight: 300
 		color: #ffffff
 		&__strong
+			max-width: 300px
 			display: block
 			font-size: 36px
 			line-height: 45px
