--- a/css/style.css
+++ b/css/style.css
@@ -1539,10 +1539,11 @@ template {
 }
 
 .package-card:first-child .package-card__img {
-  max-height: 100%;
+  height: 100%;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  object-fit: cover;
 }
 
 .package-card:first-child .package-card__info {
@@ -1633,9 +1634,13 @@ template {
 }
 
 @media (max-width: 992px) {
+  .packages {
+    padding: 40px 0 60px;
+  }
   .packages-cards {
     -ms-grid-columns: (48%)[2];
         grid-template-columns: repeat(2, 48%);
+    grid-row-gap: 20px;
   }
   .packages-cards__item:first-child {
     -ms-grid-column: span 1;
@@ -1677,6 +1682,13 @@ template {
 }
 
 @media (max-width: 768px) {
+  .packages {
+    padding: 40px 0 36px;
+  }
+  .packages__title {
+    font-size: 30px;
+    margin-bottom: 30px;
+  }
   .package-card {
     height: 520px;
   }
@@ -1692,6 +1704,13 @@ template {
   }
 }
 
+@media (max-width: 576px) {
+  .packages__title {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+}
+
 @media (max-width: 480px) {
   .package-card__info {
     padding: 20px;
@@ -1699,5 +1718,178 @@ template {
   .package-card:first-child .package-card__info {
     padding: 20px;
   }
+}
+
+.footer {
+  background-color: #0A223D;
+  padding: 108px 0 46px;
+  color: #fff;
+}
+
+.footer-wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(min-content, 1fr))[4];
+      grid-template-columns: repeat(4, minmax(-webkit-min-content, 1fr));
+      grid-template-columns: repeat(4, minmax(min-content, 1fr));
+  grid-gap: 20px;
+  grid-auto-rows: minmax(40px, -webkit-min-content);
+  grid-auto-rows: minmax(40px, min-content);
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+
+.footer__logo {
+  width: 166px;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  -ms-flex-item-align: stretch;
+      -ms-grid-row-align: stretch;
+      align-self: stretch;
+}
+
+.footer__catigories {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 3;
+  grid-row: 1 / 4;
+}
+
+.footer__social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-width: 83px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__social-network {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-line-pack: start;
+      align-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 2;
+  grid-row: 2 / 4;
+  grid-column: span 2;
+}
+
+.footer__contact-details {
+  grid-column: span 2;
+}
+
+.footer__contact-form {
+  grid-column: span 2;
+}
+
+.footer__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.footer__title {
+  margin-bottom: 16px;
+  font-size: 18px;
+  line-height: 13px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.footer__title--inline {
+  margin: 0 43px 0 0;
+}
+
+.footer__title--mb-3 {
+  margin-bottom: 30px;
+}
+
+.footer__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  color: #BDBDBD;
+  font-size: 14px;
+  line-height: 160%;
+}
+
+.footer__item--mb-2 {
+  margin-bottom: 20px;
+}
+
+.footer__link {
+  color: #BDBDBD;
+}
+
+.footer__icon-wrapper {
+  min-width: 40px;
+}
+
+.footer__text {
+  margin-bottom: 22px;
+  color: #BDBDBD;
+  font-size: 14px;
+  line-height: 160%;
+}
+
+.footer__input {
+  background-color: #fff;
+  border-radius: 4px;
+  border: none;
+  padding: 0 23px;
+  height: 50px;
+  margin-bottom: 15px;
+  -ms-flex-preferred-size: 48%;
+      flex-basis: 48%;
+}
+
+.footer__message {
+  background-color: #fff;
+  border-radius: 4px;
+  padding: 18px 23px;
+  border: none;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  margin-bottom: 23px;
+}
+
+.footer__button {
+  min-width: 160px;
+  min-height: 50px;
+  padding: 18px;
+  font-size: 12px;
+  line-height: 15px;
+  border-radius: 4px;
+}
+
+.footer__info {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #BDBDBD;
 }
 /*# sourceMappingURL=style.css.map */
