--- a/css/style.css
+++ b/css/style.css
@@ -2001,13 +2001,22 @@ template {
 }
 
 @media (max-width: 768px) {
+  .footer {
+    padding: 73px 0 33px;
+  }
   .footer__input {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
+  .footer__logo {
+    width: 104px;
+  }
 }
 
 @media (max-width: 576px) {
+  .footer {
+    padding: 69px 0 21px;
+  }
   .footer-wrapper {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
@@ -2025,21 +2034,21 @@ template {
     -ms-grid-column: 1;
     grid-column: 1;
   }
-  .footer__additional {
+  .footer__legal {
     max-width: 90%;
     -ms-grid-row: 3;
     grid-row: 3;
     -ms-grid-column: 1;
     grid-column: 1;
   }
-  .footer__categories {
+  .footer__additional {
     max-width: 90%;
     -ms-grid-row: 4;
     grid-row: 4;
     -ms-grid-column: 1;
     grid-column: 1;
   }
-  .footer__legal {
+  .footer__categories {
     max-width: 90%;
     -ms-grid-row: 5;
     grid-row: 5;
@@ -2054,7 +2063,7 @@ template {
     grid-column: 1;
   }
   .footer__contact-form {
-    max-width: 88%;
+    max-width: 85%;
     -ms-grid-row: 7;
     grid-row: 7;
     -ms-grid-column: 1;
@@ -2083,6 +2092,19 @@ template {
 }
 
 @media (max-width: 400px) {
+  .footer__social-network {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    min-height: 67px;
+  }
   .footer-bottom__wrapper {
     padding-top: 40px;
   }
