--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -67,11 +67,16 @@
 	display: flex
 	justify-content: space-between
 	&__item
+		&--mobile
+			&--visible
+				display: none
 	&__link
 		font-size: 14px
 		text-transform: uppercase
 		font-weight: bold
 		color: #FFF
+
+
 
 //@media	(max-width:	1200px)
 @media	(max-width:	992px)
@@ -120,14 +125,61 @@
 		&::after
 			bottom: 0
 
+
+	.navbar-top
+		&__user, &__search
+			&--mobile
+				&--hidden
+					display: none
+				&--visible
+					display: flex
+
 	.search
-		display: none
+		&__input
+			width: 245px
 
 	.user
-		display: none
+		flex-direction: column
+		align-items: center
+		&__name
+			&--light
+				margin-top: 10px
+				margin-left: 0
+				color: #fff
 
 	.navbar-bottom
+		padding-top: 30px
 		display: none
+		position: fixed
+		left: 0
+		right: 0
+		bottom: 0
+		top: 70px
+		&--visible
+			display: block
+
+	.navbar-menu
+		flex-direction: column
+		align-items: center
+		&__item
+			margin-bottom: 20px
+			&--mobile
+				&--visible
+					display: block
+
+	.navbar
+		&--mobile
+			&--fixed
+				position: fixed
+				top: 0
+				left: 0
+				right: 0
+				z-index: 99
+
+	body 
+		padding-top: 78px
+
+		
 
 //@media	(max-width:	576px)
 @media	(max-width:	480px)
