fixed BEM errors

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -6,9 +6,9 @@
 			display: flex
 			align-items: center
 			justify-content: space-between
-		&__search
-			margin-right: auto
-			margin-left: 108px
+	&__search
+		margin-right: auto
+		margin-left: 108px
 
 .logo
 	width: 177px
@@ -84,8 +84,8 @@
 		&-top
 			&__content
 				padding: 30px	0
-			&__search
-				margin-left: auto
+		&__search
+			margin-left: auto
 		&-bottom
 			padding: 22px	0
 		&-menu
@@ -126,7 +126,7 @@
 			bottom: 0
 
 
-	.navbar-top
+	.navbar
 		&__user, &__search
 			&--mobile
 				&--hidden
