--- a/css/style.css
+++ b/css/style.css
@@ -437,7 +437,7 @@ template {
           justify-content: space-between;
 }
 
-.navbar-top__search {
+.navbar__search {
   margin-right: auto;
   margin-left: 108px;
 }
@@ -548,7 +548,7 @@ template {
   .navbar-top__content {
     padding: 30px	0;
   }
-  .navbar-top__search {
+  .navbar__search {
     margin-left: auto;
   }
   .navbar-bottom {
@@ -598,10 +598,10 @@ template {
   .menu-burger::after {
     bottom: 0;
   }
-  .navbar-top__user--mobile--hidden, .navbar-top__search--mobile--hidden {
+  .navbar__user--mobile--hidden, .navbar__search--mobile--hidden {
     display: none;
   }
-  .navbar-top__user--mobile--visible, .navbar-top__search--mobile--visible {
+  .navbar__user--mobile--visible, .navbar__search--mobile--visible {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
