--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -37,9 +37,31 @@ button
 form,	input
 		outline: none
 
+.input
+	background-color: #fff
+	border-radius: 4px
+	border: none
+	padding: 0 23px
+	height: 50px
+
+.message
+	background-color: #fff
+	border-radius: 4px
+	padding: 18px 23px
+	border: none
+	resize: none
+
 .button
 	background: $primary
 	color: #fff
+
+.form-button
+	min-width: 160px
+	min-height: 50px
+	padding: 18px
+	font-size: 12px
+	line-height: 15px
+	border-radius: 4px
 
 .container
 	max-width: 1110px
