--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -37,6 +37,7 @@
 		background-color: $primary
 		border-radius: 4px
 		color: #fff
+		cursor: pointer
 		&__text
 			font-weight: 600
 			font-size: 8px
